# spark-researcher-fix

./: .gitignore  AGENTS.md  AUTORESEARCH.md  LICENSE  README.md  collective.py  pyproject.toml  run_autoloop.ps1  spark-researcher.project.json  spark.toml
domain-chip-agentic-marketing/: README.md  pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-agentic-marketing/docs/: AGENTIC_MARKETING_BENCH_PROMOTION_BRIDGE.md  AGENTIC_MARKETING_ONE_LOOP_SPEC.md  AGENTIC_MARKETING_REALWORLD_EVAL.md  AGENTIC_MARKETING_SOURCE_MAP.md
domain-chip-agentic-marketing/docs/research-ingest/: approved-sources.json  discovery-seeds.json
domain-chip-agentic-marketing/src/domain_chip_agentic_marketing/: cli.py
domain-chip-vibe-incubator/: README.md  pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-vibe-incubator/dashboard/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
domain-chip-vibe-incubator/dashboard/scripts/: build-dashboard-data.mjs
domain-chip-vibe-incubator/dashboard/src/: App.tsx  api.ts  index.css
domain-chip-vibe-incubator/docs/: VIBE_INCUBATOR_ARCHITECTURE_PACKET.json  VIBE_INCUBATOR_AUTOLOOP.md  VIBE_INCUBATOR_AUTONOMOUS_VISION.md  VIBE_INCUBATOR_CLEAN_TOKEN_PRODUCT_PLAN.md  VIBE_INCUBATOR_CONTROL_PLANE.md  VIBE_INCUBATOR_FUTARCHY_AND_GOVERNANCE.md  VIBE_INCUBATOR_GENESIS_CONTRIBUTION_SYSTEM.md  VIBE_INCUBATOR_ONE_LOOP_SPEC.md  VIBE_INCUBATOR_OS_ARCHITECTURE.md  VIBE_INCUBATOR_REALWORLD_EVAL.md  VIBE_INCUBATOR_SOURCE_MAP.md  VIBE_INCUBATOR_TOKEN_STACK.md  VIBE_VIBE_AUTORESEARCH_COLLECTIVE_MIRROR.md  VIBE_VIBE_DATA_AND_CONTRACT_MAP.md  VIBE_VIBE_DESIGN_REFERENCE.md  VIBE_VIBE_IMPLEMENTATION_ROADMAP.md  VIBE_VIBE_PRODUCT_SURFACES.md  VIBE_VIBE_RECURSIVE_PROGRESS_AUDIT_2026-03-15.md
domain-chip-vibe-incubator/src/domain_chip_vibe_incubator/: __init__.py  (+12 more)
domain-chip-vibe-incubator/tests/: test_agents.py  test_api.py  test_dashboard_build.py  test_enrichment.py  test_notifications.py  test_scheduler.py
domain-chip-web-designer/: README.md  pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-web-designer/docs/: PROMPT_STACK_INVOCATION.md  WEB_DESIGN_BENCH_PROMOTION_BRIDGE.md  WEB_DESIGN_ONE_LOOP_SPEC.md  WEB_DESIGN_REALWORLD_EVAL.md  WEB_DESIGN_SOURCE_MAP.md
(+148 files in other folders)
