[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-chip-agentic-marketing"
version = "0.1.0"
description = "Agentic marketing and distribution domain chip for startup growth systems built from automations, agents, LLMs, and open-source tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
