[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-chip-web-designer"
version = "0.1.0"
description = "Private-repo-ready Spark domain chip for award-level website and dashboard design with UI/UX guardrails."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
